--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,41 +13,48 @@ jobs:
       ANDROID_MINAPI: 21
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.12'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
 
-    - name: Install system deps
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y zip unzip openjdk-17-jdk python3-pip python3-setuptools \
-          libssl-dev libffi-dev
+      - name: Install system deps
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y zip unzip openjdk-17-jdk python3-pip python3-setuptools \
+            libssl-dev libffi-dev
 
-    - name: Install Buildozer & Cython
-      run: |
-        python3 -m pip install --upgrade pip
-        pip install buildozer cython
+      - name: Install Buildozer & Cython
+        run: |
+          python3 -m pip install --upgrade pip
+          pip install buildozer cython
 
-    - name: Setup Android SDK
-      uses: android-actions/setup-android@v3
-      with:
-        packages: "platform-tools;build-tools;${{ env.ANDROID_API }},platforms;android-${{ env.ANDROID_API }}"
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
+        with:
+          packages: |
+            platform-tools
+            build-tools;${{ env.ANDROID_API }}.0.0
+            platforms;android-${{ env.ANDROID_API }}
 
-    - name: Setup Android NDK
-      uses: nttld/setup-ndk@v1
-      with:
-        ndk-version: r25b
-        link-to-sdk: true
+      - name: Setup Android NDK
+        uses: nttld/setup-ndk@v1
+        with:
+          ndk-version: r25b
+          link-to-sdk: true
 
-    - name: Build APK
-      run: buildozer android debug --quiet
+      - name: Build APK
+        run: |
+          # 清理舊中間檔（可选）
+          buildozer android clean
+          # 生成 debug APK
+          buildozer android debug --verbose
 
-    - name: Upload APK artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: MyKivyGame-debug-apk
-        path: bin/*.apk
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: MyKivyGame-debug-apk
+          path: bin/*.apk
