--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,11 +16,16 @@ jobs:
       - name: 檢出程式碼
         uses: actions/checkout@v3
 
+      - name: 設定 Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
       - name: 安裝系統相依套件
         run: |
           sudo apt-get update
           sudo apt-get install -y zip unzip openjdk-17-jdk python3-pip python3-setuptools \
-            python3-distutils libssl-dev libffi-dev
+            libssl-dev libffi-dev
 
       - name: 安裝 Buildozer & Cython
         run: |
@@ -39,7 +44,7 @@ jobs:
           link-to-sdk: true
 
       - name: 建置 APK
-        working-directory: mygame_kivy    # ← 切到放 buildozer.spec 的子資料夾
+        working-directory: mygame_kivy
         run: |
           buildozer android clean
           buildozer android debug --verbose
@@ -48,4 +53,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: MyKivyGame-debug-apk
-          path: mygame_kivy/bin/*.apk   # ← 同理要指定正確路徑
+          path: bin/*.apk
