--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -44,7 +44,7 @@ jobs:
           link-to-sdk: true
 
       - name: 建置 APK
-        working-directory: mygame_kivy/mygame_kivy
+        working-directory: mygame_kivy
         run: |
           buildozer android clean
           buildozer android debug --verbose
@@ -53,5 +53,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: MyKivyGame-debug-apk
-          path: mygame_kivy/mygame_kivy/bin/*.apk
+          path: mygame_kivy/bin/*.apk
 
