--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,4 +1,4 @@
-name: 建置 APK
+name: Build APK
 
 on:
   push:
@@ -16,7 +16,7 @@ jobs:
       - name: 檢出程式碼
         uses: actions/checkout@v3
 
-      - name: 設定 Python 3.11
+      - name: 設定 Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
@@ -24,9 +24,8 @@ jobs:
       - name: 安裝系統相依套件
         run: |
           sudo apt-get update
-          sudo apt-get install -y \
-            zip unzip openjdk-17-jdk python3-pip python3-setuptools \
-            python3.11-distutils libssl-dev libffi-dev
+          sudo apt-get install -y zip unzip openjdk-17-jdk python3-pip python3-setuptools \
+            libssl-dev libffi-dev
 
       - name: 安裝 Buildozer & Cython
         run: |
@@ -45,7 +44,7 @@ jobs:
           link-to-sdk: true
 
       - name: 建置 APK
-        working-directory: mygame_kivy/mygame_kivy
+        working-directory: mygame_kivy
         run: |
           buildozer android clean
           buildozer android debug --verbose
@@ -55,3 +54,4 @@ jobs:
         with:
           name: MyKivyGame-debug-apk
           path: mygame_kivy/mygame_kivy/bin/*.apk
+
