--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,7 +2,7 @@ name: Build APK
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -44,7 +44,8 @@ jobs:
           link-to-sdk: true
 
       - name: 建置 APK
-        working-directory: mygame_kivy
+        # 如果 buildozer.spec 在 repo 根目錄，就不需要 working-directory
+        # 如果在子資料夾，就改成 working-directory: ./mygame_kivy
         run: |
           buildozer android clean
           buildozer android debug --verbose
@@ -53,5 +54,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: MyKivyGame-debug-apk
-          path: mygame_kivy/mygame_kivy/bin/*.apk
-
+          path: mygame_kivy/bin/*.apk
