--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -45,11 +45,10 @@ jobs:
 
       - name: 建置 APK
         run: |
-          cd mygame_kivy
           buildozer android debug --verbose
 
       - name: 上傳 APK 產物
         uses: actions/upload-artifact@v4
         with:
           name: MyKivyGame-debug-apk
-          path: mygame_kivy/bin/*.apk
+          path: bin/*.apk
