第二十二次

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -34,7 +34,8 @@ jobs:
 
       - name: 安裝 Android SDK 套件（手動方式）
         run: |
-          sdkmanager --install "platform-tools" "build-tools;33.0.2" "platforms;android-${{ env.ANDROID_API }}"
+          export PATH=$PATH:/usr/local/lib/android/sdk/cmdline-tools/latest/bin
+          sdkmanager --install "platform-tools" "build-tools;33.0.2" "platforms;android-33"
           yes | sdkmanager --licenses
 
       - name: 安裝 Android NDK
