--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,53 +3,28 @@ name: Build APK
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  build-apk:
+  build:
     runs-on: ubuntu-latest
-    env:
-      ANDROID_API: 33
-      ANDROID_MINAPI: 21
-
     steps:
-      - name: 檢出程式碼
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v2
 
-      - name: 設定 Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
 
-      - name: 安裝系統相依套件
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y zip unzip openjdk-17-jdk python3-pip python3-setuptools \
-            libssl-dev libffi-dev
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install buildozer cython
 
-      - name: 安裝 Buildozer & Cython
-        run: |
-          python3 -m pip install --upgrade pip
-          pip install buildozer cython
-
-      - name: 安裝 Android SDK 套件（手動方式）
-        run: |
-          export PATH=$PATH:/usr/local/lib/android/sdk/cmdline-tools/latest/bin
-          sdkmanager --install "platform-tools" "build-tools;33.0.2" "platforms;android-33"
-          yes | sdkmanager --licenses
-
-      - name: 安裝 Android NDK
-        uses: nttld/setup-ndk@v1
-        with:
-          ndk-version: r25b
-          link-to-sdk: true
-
-      - name: 建置 APK
-        run: |
-          buildozer android debug --verbose
-
-      - name: 上傳 APK 產物
-        uses: actions/upload-artifact@v4
-        with:
-          name: MyKivyGame-debug-apk
-          path: bin/*.apk
+    - name: Install Docker and use buildozer container to build APK
+      run: |
+        docker run --rm -v ${{ github.workspace }}:/home/user/hostcwd \
+          -w /home/user/hostcwd \
+          kivy/buildozer \
+          buildozer android debug
