--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v2
 
@@ -19,12 +20,12 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        pip install --upgrade pip
         pip install buildozer cython
 
-    - name: Install Docker and use buildozer container to build APK
+    - name: Build APK using Buildozer Docker
       run: |
         docker run --rm -v ${{ github.workspace }}:/home/user/hostcwd \
           -w /home/user/hostcwd \
-          kivy/buildozer \
+          ghcr.io/kivy/buildozer:latest \
           buildozer android debug
