--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -28,4 +28,5 @@ jobs:
         docker run --rm -v ${{ github.workspace }}:/home/user/hostcwd \
           -w /home/user/hostcwd \
           ghcr.io/kivy/buildozer:latest \
-          buildozer android debug
+          /bin/bash -c "buildozer android debug"
+
