--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,4 +1,4 @@
-name: Build APK
+name: Build Kivy APK
 
 on:
   push:
@@ -16,11 +16,20 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.11'
+        python-version: 3.11
 
-    - name: Build APK using Buildozer Docker (Docker Hub)
+    - name: Install dependencies
       run: |
-        docker run --rm -v ${{ github.workspace }}:/home/user/hostcwd \
-          -w /home/user/hostcwd \
-          kivy/buildozer:stable \
-          buildozer android debug
+        sudo apt update
+        sudo apt install -y build-essential ccache libncurses5 unzip openjdk-11-jdk wget
+        python -m pip install --upgrade pip
+        pip install cython buildozer
+
+    - name: Install Android SDK and NDK
+      run: |
+        mkdir -p ~/.android
+        echo "sdk.dir=$HOME/.buildozer/android/platform/android-sdk" > ~/.android/repositories.cfg
+        yes | buildozer android update
+
+    - name: Build APK
+      run: buildozer android debug
